[package]
name = "landblock"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
blake2 = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = {version = "1.0"}
chrono = { version="0.4.19", features= ["serde"] }
blake3 = "1.0.0"